# lpsmagic

./: .gitignore  CMakeLists.txt  lpsmagic.kdev4
data/: CMakeLists.txt  libsysuid-screenlock-nokia.css  lpsdaemon.conf  lpsmagic.conf  lpsmagic.xml
debian/: README  README.Debian  changelog  control  copyright  files  lpsmagic.aegis  lpsmagic.substvars  postinst  prerm  rules
docs/: lpsmagic.qch
docs/html/: annotated.html  classLpsMagic-members.html  classLpsMagic.html  classOutput-members.html  classOutput.html  classRenderUtil-members.html  classRenderUtil.html  classRenderer-members.html  classRenderer.html  classRendererInterface-members.html  classRendererInterface.html  classRendererManager-members.html  classRendererManager.html  classes.html  files.html  functions.html  functions_func.html  index.html  index.qhp  lpsmagic.qch  lpsmagic_8h_source.html  output_8h_source.html  renderer_8h_source.html  rendererinterface_8h_source.html  renderermanager_8h_source.html  renderutil_8h_source.html
docs/html/search/: all_62.html  all_63.html  all_66.html  all_67.html  all_68.html  all_6c.html  all_70.html  all_72.html  all_73.html  all_7e.html  classes_6c.html  classes_72.html  functions_61.html  functions_64.html  functions_65.html  functions_69.html  functions_6c.html  functions_72.html  functions_74.html  functions_76.html  search.js
docs/latex/: annotated.tex  classLpsMagic.tex  classOutput.tex  classRenderUtil.tex  classRenderer.tex  classRendererInterface.tex  classRendererManager.tex  doxygen.sty  refman.tex
icons/: CMakeLists.txt  list.txt
qxtcore/: CMakeLists.txt  qxtfilelock.h  qxtglobal.h
scripts/: clean.sh  configure.sh  lpsmagic_1.80_armel.deb  make.sh  makedeb.sh  mount.sh  prune.sh
src/: CMakeLists.txt  Doxyfile  lpsmagic.cpp  lpsmagic.h  main.cpp  renderedimage.cpp  renderedimage.h  renderer.cpp  renderer.h  rendererinterface.h  renderermanager.cpp  renderermanager.h  renderutil.cpp  renderutil.h
src/daemon/: CMakeLists.txt  lpsdbus.cpp  lpsdbus.h  main.cpp
src/renderers/: CMakeLists.txt  batteryrenderer.cpp  batteryrenderer.h  daterenderer.cpp  daterenderer.h  dumbtext.cpp  dumbtext.h  iconrenderer.cpp  iconrenderer.h
