include_directories(${QT_INCLUDES} ${QT_QTCORE_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
set(QXTCORE_SRCS  qxtabstractconnectionmanager.cpp
    qxtabstractfileloggerengine.cpp
    qxtabstractiologgerengine.cpp
    qxtbasicfileloggerengine.cpp
    qxtbasicstdloggerengine.cpp
    qxtcommandoptions.cpp
    qxtcsvmodel.cpp
    qxtdaemon.cpp
    qxtdatastreamsignalserializer.cpp
    qxtdeplex.cpp
    qxterror.cpp
    qxtfifo.cpp
    qxtfilelock.cpp
    qxtfilelock_unix.cpp
    qxtglobal.cpp
    qxthmac.cpp
    qxtjob.cpp
    qxtjson.cpp
    qxtlinesocket.cpp
    qxtlinkedtree.cpp
    qxtlocale.cpp
    qxtlogger.cpp
    qxtloggerengine.cpp
    qxtlogstream.cpp
    qxtmetaobject.cpp
    qxtmodelserializer.cpp
    qxtmultisignalwaiter.cpp
    qxtnull.cpp
    qxtpipe.cpp
    qxtpointerlist.cpp
    qxtrpcservice.cpp
    qxtserialdevice.cpp
    qxtserialdevice_unix.cpp
    qxtsignalgroup.cpp
    qxtsignalwaiter.cpp
    qxtslotjob.cpp
    qxtslotmapper.cpp
    qxtstdio.cpp
    qxtstdstreambufdevice.cpp
    qxttimer.cpp
    qxtxmlfileloggerengine.cpp)

set(QXTCORE_HDRS qxtabstractconnectionmanager.h
    qxtabstractfileloggerengine.h
    qxtabstractiologgerengine.h
    qxtabstractsignalserializer.h
    qxtalgorithms.h
    qxtbasicfileloggerengine.h
    qxtbasicstdloggerengine.h
    qxtboundcfunction.h
    qxtboundfunction.h
    qxtboundfunctionbase.h
    qxtcommandoptions.h
    qxtcore.h
    qxtcsvmodel.h
    qxtdaemon.h
    qxtdatastreamsignalserializer.h
    qxtdeplex.h
    qxtdeplex_p.h
    qxterror.h
    qxtfifo.h
    qxtfilelock.h
    qxtfilelock_p.h
    qxtglobal.h
    qxthmac.h
    qxtjob.h
    qxtjob_p.h
    qxtjson.h
    qxtlinesocket.h
    qxtlinesocket_p.h
    qxtlinkedtree.h
    qxtlocale.h
    qxtlocale_data_p.h
    qxtlogger.h
    qxtlogger_p.h
    qxtloggerengine.h
    qxtlogstream.h
    qxtlogstream_p.h
    qxtmetaobject.h
    qxtmetatype.h
    qxtmodelserializer.h
    qxtmultisignalwaiter.h
    qxtnamespace.h
    qxtnull.h
    qxtnullable.h
    qxtpairlist.h
    qxtpimpl.h
    qxtpipe.h
    qxtpipe_p.h
    qxtpointerlist.h
    qxtrpcservice.h
    qxtrpcservice_p.h
    qxtserialdevice.h
    qxtserialdevice_p.h
    qxtsharedprivate.h
    qxtsignalgroup.h
    qxtsignalwaiter.h
    qxtslotjob.h
    qxtslotjob_p.h
    qxtslotmapper.h
    qxtstdio.h
    qxtstdio_p.h
    qxtstdstreambufdevice.h
    qxttimer.h
    qxttypelist.h
    qxtxmlfileloggerengine.h)

qt4_wrap_cpp(QXTCORE_MOC ${QXTCORE_HDRS})
add_library(qxtcore SHARED ${QXTCORE_MOC} ${QXTCORE_SRCS})
target_link_libraries(qxtcore ${QT_CORE_LIBRARY})
install(TARGETS qxtcore DESTINATION /usr/lib)
